// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderPage when passed 0 \`orderItems\` renders correctly with valid props 1`] = `
<OrderPage
  assemblies={
    Array [
      Object {
        "created_at": "2019-07-29T22:49:47.431Z",
        "id": 1,
        "name": "Souvlaki",
        "updated_at": "2019-07-29T22:49:47.431Z",
      },
      Object {
        "created_at": "2019-07-29T22:49:47.519Z",
        "id": 2,
        "name": "Chilli con Carne",
        "updated_at": "2019-07-29T22:49:47.519Z",
      },
    ]
  }
  csrf="3yIq75tyV791TFkzSZo/S4b+TVa/N5J3dI14PzMUPviGViEGeDSnGnvNix+MaB0RB0XuV7bpX8I3SmIEAr4/zQ=="
  departments={
    Array [
      Object {
        "created_at": "2019-07-21T16:03:32.883Z",
        "id": 3,
        "name": "Bakery",
        "updated_at": "2019-07-21T16:03:32.883Z",
      },
      Object {
        "created_at": "2019-07-21T16:03:32.883Z",
        "id": 5,
        "name": "Meat",
        "updated_at": "2019-07-21T16:03:32.883Z",
      },
    ]
  }
  items={
    Array [
      Object {
        "created_at": "2019-07-21T16:03:33.162Z",
        "department_id": 5,
        "id": 15,
        "name": "Agave Syrup",
        "updated_at": "2019-07-21T16:03:33.162Z",
      },
      Object {
        "created_at": "2019-07-21T16:03:33.162Z",
        "department_id": 3,
        "id": 13,
        "name": "Agave Syrup",
        "updated_at": "2019-07-21T16:03:33.162Z",
      },
    ]
  }
  orderItems={Array []}
>
  <FilterBar
    initialSelection="Item"
    items={
      Array [
        Object {
          "text": "Item",
          "url": "",
        },
        Object {
          "text": "Department",
          "url": "",
        },
        Object {
          "text": "Meal",
          "url": "",
        },
      ]
    }
    onChangeFilterHandler={[Function]}
  >
    <ul
      className="filterBar"
    >
      <FilterBarItem
        isActive={true}
        key="filterBar-item-0"
        onChangeFilterHandler={[Function]}
        text="Item"
        url=""
      >
        <li>
          <a
            className="filterBar-link mix-filterBar-link_isActive"
            href=""
            onClick={[Function]}
          >
            Item
          </a>
        </li>
      </FilterBarItem>
      <FilterBarItem
        isActive={false}
        key="filterBar-item-1"
        onChangeFilterHandler={[Function]}
        text="Department"
        url=""
      >
        <li>
          <a
            className="filterBar-link"
            href=""
            onClick={[Function]}
          >
            Department
          </a>
        </li>
      </FilterBarItem>
      <FilterBarItem
        isActive={false}
        key="filterBar-item-2"
        onChangeFilterHandler={[Function]}
        text="Meal"
        url=""
      >
        <li>
          <a
            className="filterBar-link"
            href=""
            onClick={[Function]}
          >
            Meal
          </a>
        </li>
      </FilterBarItem>
    </ul>
  </FilterBar>
  <div
    className="js-orderItem"
  >
    <OrderConcernGroup
      assemblies={
        Array [
          Object {
            "created_at": "2019-07-29T22:49:47.431Z",
            "id": 1,
            "name": "Souvlaki",
            "updated_at": "2019-07-29T22:49:47.431Z",
          },
          Object {
            "created_at": "2019-07-29T22:49:47.519Z",
            "id": 2,
            "name": "Chilli con Carne",
            "updated_at": "2019-07-29T22:49:47.519Z",
          },
        ]
      }
      assemblyMap={
        Object {
          "1": Object {
            "created_at": "2019-07-29T22:49:47.431Z",
            "id": 1,
            "name": "Souvlaki",
            "updated_at": "2019-07-29T22:49:47.431Z",
          },
          "2": Object {
            "created_at": "2019-07-29T22:49:47.519Z",
            "id": 2,
            "name": "Chilli con Carne",
            "updated_at": "2019-07-29T22:49:47.519Z",
          },
        }
      }
      concern="MEAL"
      csrf="3yIq75tyV791TFkzSZo/S4b+TVa/N5J3dI14PzMUPviGViEGeDSnGnvNix+MaB0RB0XuV7bpX8I3SmIEAr4/zQ=="
      departmentMap={
        Object {
          "3": Object {
            "created_at": "2019-07-21T16:03:32.883Z",
            "id": 3,
            "name": "Bakery",
            "updated_at": "2019-07-21T16:03:32.883Z",
          },
          "5": Object {
            "created_at": "2019-07-21T16:03:32.883Z",
            "id": 5,
            "name": "Meat",
            "updated_at": "2019-07-21T16:03:32.883Z",
          },
        }
      }
      departments={
        Array [
          Object {
            "created_at": "2019-07-21T16:03:32.883Z",
            "id": 3,
            "name": "Bakery",
            "updated_at": "2019-07-21T16:03:32.883Z",
          },
          Object {
            "created_at": "2019-07-21T16:03:32.883Z",
            "id": 5,
            "name": "Meat",
            "updated_at": "2019-07-21T16:03:32.883Z",
          },
        ]
      }
      itemMap={
        Object {
          "13": Object {
            "created_at": "2019-07-21T16:03:33.162Z",
            "department_id": 3,
            "id": 13,
            "name": "Agave Syrup",
            "updated_at": "2019-07-21T16:03:33.162Z",
          },
          "15": Object {
            "created_at": "2019-07-21T16:03:33.162Z",
            "department_id": 5,
            "id": 15,
            "name": "Agave Syrup",
            "updated_at": "2019-07-21T16:03:33.162Z",
          },
        }
      }
      orderItems={Array []}
    />
  </div>
</OrderPage>
`;

exports[`OrderPage when passed more than 0 \`orderItems\` renders correctly with valid props 1`] = `
<Fragment>
  <FilterBar
    initialSelection="Item"
    items={
      Array [
        Object {
          "text": "Item",
          "url": "",
        },
        Object {
          "text": "Department",
          "url": "",
        },
        Object {
          "text": "Meal",
          "url": "",
        },
      ]
    }
    onChangeFilterHandler={[Function]}
  />
  <div
    className="js-orderItem"
  >
    <OrderItemList
      assemblies={
        Array [
          Object {
            "created_at": "2019-07-29T22:49:47.431Z",
            "id": 1,
            "name": "Souvlaki",
            "updated_at": "2019-07-29T22:49:47.431Z",
          },
          Object {
            "created_at": "2019-07-29T22:49:47.519Z",
            "id": 2,
            "name": "Chilli con Carne",
            "updated_at": "2019-07-29T22:49:47.519Z",
          },
        ]
      }
      assemblyMap={
        Object {
          "1": Object {
            "created_at": "2019-07-29T22:49:47.431Z",
            "id": 1,
            "name": "Souvlaki",
            "updated_at": "2019-07-29T22:49:47.431Z",
          },
          "2": Object {
            "created_at": "2019-07-29T22:49:47.519Z",
            "id": 2,
            "name": "Chilli con Carne",
            "updated_at": "2019-07-29T22:49:47.519Z",
          },
        }
      }
      concern="ITEM"
      csrf="3yIq75tyV791TFkzSZo/S4b+TVa/N5J3dI14PzMUPviGViEGeDSnGnvNix+MaB0RB0XuV7bpX8I3SmIEAr4/zQ=="
      departmentMap={
        Object {
          "3": Object {
            "created_at": "2019-07-21T16:03:32.883Z",
            "id": 3,
            "name": "Bakery",
            "updated_at": "2019-07-21T16:03:32.883Z",
          },
          "5": Object {
            "created_at": "2019-07-21T16:03:32.883Z",
            "id": 5,
            "name": "Meat",
            "updated_at": "2019-07-21T16:03:32.883Z",
          },
        }
      }
      departments={
        Array [
          Object {
            "created_at": "2019-07-21T16:03:32.883Z",
            "id": 3,
            "name": "Bakery",
            "updated_at": "2019-07-21T16:03:32.883Z",
          },
          Object {
            "created_at": "2019-07-21T16:03:32.883Z",
            "id": 5,
            "name": "Meat",
            "updated_at": "2019-07-21T16:03:32.883Z",
          },
        ]
      }
      itemMap={
        Object {
          "13": Object {
            "created_at": "2019-07-21T16:03:33.162Z",
            "department_id": 3,
            "id": 13,
            "name": "Agave Syrup",
            "updated_at": "2019-07-21T16:03:33.162Z",
          },
          "15": Object {
            "created_at": "2019-07-21T16:03:33.162Z",
            "department_id": 5,
            "id": 15,
            "name": "Agave Syrup",
            "updated_at": "2019-07-21T16:03:33.162Z",
          },
        }
      }
      orderItems={
        Array [
          Object {
            "assembly_id": 1,
            "created_at": "2019-07-29T22:50:37.840Z",
            "department_id": 3,
            "id": 22,
            "item_id": 15,
            "order_id": 11,
            "picked": false,
            "qty": 3,
            "updated_at": "2019-07-29T22:50:37.840Z",
          },
          Object {
            "assembly_id": null,
            "created_at": "2019-07-29T22:50:37.887Z",
            "department_id": 5,
            "id": 23,
            "item_id": 13,
            "order_id": 11,
            "picked": false,
            "qty": 1,
            "updated_at": "2019-07-29T22:50:37.887Z",
          },
        ]
      }
    />
  </div>
</Fragment>
`;
